--- a/FireEmblem/src/main/resources/application.properties
+++ b/FireEmblem/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.username=rm94488
+spring.datasource.password=250204
+spring.jpa.hibernate.ddl-auto=update
